# TurboGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  DILIGENT_ENGINE_INTEGRATION_CODE.md  ECS_TASKS_CODE.md  README.md  RESOURCE_PIPELINE_TASKS_CODE.md
app/: main.cpp
assets/shaders_gl/: basic.frag  basic.vert  textured.frag  textured.shader.json  textured.vert
assets/shaders_hlsl/: basic.frag.hlsl  basic.vert.hlsl  textured.frag.hlsl  textured.shader.json  textured.vert.hlsl
assets/textures/: arena_floor.ppm  arena_wall.ppm  sandstone.ppm
engine/core/: Application.cpp  Application.h  Assert.h  Config.cpp  Config.h  EventBus.h  Log.cpp  Log.h  Time.cpp  Time.h
engine/ecs/: collision_utils.cpp  collision_utils.h  components.h  debug_render_system.cpp  debug_render_system.h  entity.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h  transform_utils.cpp  transform_utils.h  world.cpp  world.h
engine/game/: FreeCameraController.cpp  FreeCameraController.h  GameplayState.cpp  GameplayState.h  IGameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  StateStack.cpp  StateStack.h
engine/platform/: Events.h  Input.cpp  Input.h  Window.cpp  Window.h  WindowGLFW.cpp  WindowGLFW.h
engine/renderer/: RenderAdapter.h  Renderer.cpp  Renderer.h  Transform2D.h
engine/resources/: loaders.cpp  loaders.h  mesh.h  resource_manager.cpp  resource_manager.h  resource_state.h  shader_program.h  texture.h
engine/rhi/: CommandBuffer.h  Device.h  Pipeline.h  RHI.cpp  RHI.h  Resources.h  Swapchain.h  Sync.h  Types.h
engine/rhi_d3d12/: DxCommandBuffer.cpp  DxCommandBuffer.h  DxDevice.cpp  DxDevice.h  DxPipeline.cpp  DxPipeline.h  DxResources.cpp  DxResources.h  DxSwapchain.cpp  DxSwapchain.h  DxSync.cpp  DxSync.h
engine/rhi_diligent/: DiligentDevice.cpp  DiligentDevice.h
engine/rhi_opengl/: GLCommandBuffer.cpp  GLCommandBuffer.h  GLDevice.cpp  GLDevice.h  GLPipeline.cpp  GLPipeline.h  GLResources.cpp  GLResources.h  GLShader.cpp  GLShader.h  GLSwapchain.cpp  GLSwapchain.h  GLUtils.cpp  GLUtils.h
engine/rhi_vulkan/: VkCommandBuffer.cpp  VkCommandBuffer.h  VkDevice.cpp  VkDevice.h  VkPipeline.cpp  VkPipeline.h  VkResources.cpp  VkResources.h  VkSwapchain.cpp  VkSwapchain.h  VkSync.cpp  VkSync.h
reports/: 4.tex
tests/: PhysicsSystemTests.cpp
tools/shader_compiler/: CMakeLists.txt
